<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
    <string name="facebook_app_id" translatable="false">152779318256915</string>
    <string name="GLOBAL_OR">ou</string>
    <string name="GLOBAL_OK">OK</string>
    <string name="GLOBAL_BY">par</string>
    <string name="GLOBAL_ERROR">Erreur</string>
    <string name="GLOBAL_CANCEL">Annuler</string>
    <string name="GLOBAL_CAMERA">Appareil photo</string>
    <string name="GLOBAL_ALBUMS">Albums</string>
    <string name="GLOBAL_EURO">€</string>
    <string name="GLOBAL_SEND">Publier</string>
    <string name="GLOBAL_YES">Oui</string>
    <string name="GLOBAL_NO">Non</string>
    <string name="GLOBAL_CLEAR">Effacer</string>
    <string name="GLOBAL_WAIT">Veuillez patienter…</string>
    <string name="GLOBAL_NEXT">Suivant</string>
    <string name="GLOBAL_CONFIRM">Confirmer</string>
    <string name="GLOBAL_PAY">Payer</string>
    <string name="GLOBAL_SAVE">Enregistrer</string>
    <string name="GLOBAL_EDIT">Changer</string>
    <string name="GLOBAL_JOIN">Rejoindre</string>
    <string name="GLOBAL_VALIDATE">Valider</string>
    <string name="GLOBAL_INTERO">\?</string>
    <string name="GLOBAL_UPDATE">Mise à jour disponible !</string>
    <string name="GLOBAL_SHARE">Partager</string>
    <string name="GLOBAL_ACCOUNT">Mon Compte ⋅ </string>
    <string name="GLOBAL_LOADING">chargement…</string>
    <string name="SHARE_FLOOZ">Partager ce Flooz</string>
    <string name="SHARE_COLLECT">Partager cette cagnotte</string>
    <string name="LOGOUT_INFO">Êtes-vous sûr de vouloir vous déconnecter ?</string>
    <string name="START_SIGNUP">Inscription</string>
    <string name="START_LOGIN">Connexion</string>
    <string name="START_TITLE">Pay, Like,</string>
    <string name="START_WELCOME">Bienvenue !</string>
    <string name="START_WELCOME_BACK">Ravis de vous revoir !</string>
    <string name="START_FORGET">Mot de passe oublié !</string>
    <string name="MSG_UPDATE">Bonne nouvelle ! Une nouvelle version de Flooz est disponible.</string>
    <string name="BTN_UPDATE">Mettre à jour</string>
    <string name="LEARN_MORE">En savoir plus</string>
    <string name="SEND_COMMENT">Ajouter un commentaire…</string>
    <string name="COUNTRY_PICKER_TITLE">Pays disponibles</string>
    <string name="NAV_HOME">Fil d\'actualité</string>
    <string name="NAV_PROFILE">Mon profil</string>
    <string name="NAV_PUBLIC">Explorer</string>
    <string name="NAV_LOGIN">Se connecter</string>
    <string name="NAV_SIGNUP">S\'inscrire</string>
    <string name="NAV_ACCOUNT">Mon profil</string>
    <string name="NAV_AUDIOTEL">Audiotel</string>
    <string name="NAV_SETTINGS">Paramètres</string>
    <string name="NAV_TIMELINE">Flooz</string>
    <string name="NAV_EDIT_ACCOUNT">Modifier</string>
    <string name="NAV_INFORMATIONS">Informations</string>
    <string name="NAV_NOTIFICATIONS">Notifs</string>
    <string name="NAV_CASHIN">Ajouter des fonds</string>
    <string name="NAV_CASHOUT">Virer à ma banque</string>
    <string name="NAV_PAYMENTS">Moyens de paiement</string>
    <string name="NAV_RIB">RIB</string>
    <string name="NAV_PASSWORD">Mot de passe</string>
    <string name="NAV_PASSWORD_FORGET">MDP oublié</string>
    <string name="NAV_CREDIT_CARD">Carte bancaire</string>
    <string name="NAV_CREDIT_CARD_ADD">Ajouter une carte bancaire</string>
    <string name="NAV_EVENT_PARTICIPANTS">Participants</string>
    <string name="NAV_FRIENDS">Mes amis</string>
    <string name="NAV_DOCUMENTS">Justificatifs</string>
    <string name="NAV_SECURE_CODE">Sécurité</string>
    <string name="NAV_INVIT_CODE">Code</string>
    <string name="NAV_PHOTO_GALLERY">Galerie Photo</string>
    <string name="NAV_3D_SECURE">3D Secure</string>
    <string name="NAV_INVITATION">Inviter mes amis</string>
    <string name="NAV_FRIEND_PICKER">Choisir un destinataire</string>
    <string name="NAV_SCANNER">Scanner un code</string>
    <string name="NAV_FRIEND_REQUEST">Mes demandes d\'ami</string>
    <string name="NAV_SOCIAL_LIKES">J\'AIME</string>
    <string name="NAV_COLLECT_INVITED">Invités</string>
    <string name="NAV_SHOP_HISTORY">Historique d\'achats</string>
    <string name="NAV_CASHOUT_HISTORY">Historique des virements</string>
    <string name="MENU_HOME">Accueil</string>
    <string name="MENU_NOTIF">Notifs</string>
    <string name="MENU_SHARE">Partager</string>
    <string name="MENU_ACCOUNT">Moi</string>
    <string name="HOME_LOGIN">Connexion</string>
    <string name="HOME_SIGNUP">S\'inscrire</string>
    <string name="CREDIT_CARD_SCAN">Scanner ma carte, c\'est plus rapide !</string>
    <string name="CREDIT_CARD_REMOVE">Supprimer cette carte</string>
    <string name="CREDIT_CARD_INFOS">Vos données bancaires ne sont pas stockées dans l\'application. Elles sont cryptées et conservées chez Rentabiliweb, établissement de paiement certifié PCI-DSS niveau 1, soit le plus haut niveau d\'exigence en matière de sécurité des données bancaires sur Internet. Vous pouvez supprimer votre carte bancaire à tout moment.</string>
    <string name="CASHOUT_BALANCE">Votre solde Flooz</string>
    <string name="CASHOUT_PLACEHOLDER">Saisir le montant à retirer</string>
    <string name="CASHOUT_INFO">Virer la totalité ou une partie de votre porte-monnaie sur votre compte bancaire.</string>
    <string name="CASHOUT_BUTTON">Virer %s</string>
    <string name="NEW_TRANSACTION">Flooz</string>
    <string name="NEW_COLLECT">Cagnotte</string>
    <string name="INFORMATIONS_WHY">Sécurité</string>
    <string name="INFORMATIONS_TERMS">Conditions d\'utilisation</string>
    <string name="INFORMATIONS_FAQ">Questions / Réponses</string>
    <string name="INFORMATIONS_PREVIEW">Visite Guidée</string>
    <string name="INFORMATIONS_ABOUT">A Propos</string>
    <string name="INFORMATIONS_CONTACT">Contactez-nous</string>
    <string name="INFORMATIONS_REVIEW">Idées/Critiques</string>
    <string name="INFORMATIONS_RATE_APP">Noter sur le Play Store</string>
    <string name="MISSING_FIELDS">Complétez votre profil pour finaliser votre inscription</string>
    <string name="NOTIFICATIONS_SECTION_FEED">Feed</string>
    <string name="NOTIFICATIONS_SECTION_PUSH">Push</string>
    <string name="NOTIFICATIONS_SECTION_PHONE">SMS</string>
    <string name="NOTIFICATIONS_SECTION_EMAIL">Email</string>
    <string name="PAYEMENT_FIELD_WALLET">Porte-monnaie</string>
    <string name="PAYEMENT_FIELD_CARD">Carte Bancaire</string>
    <string name="FIELD_USERNAME">Pseudo</string>
    <string name="FIELD_BIRTHDATE">Date de naissance</string>
    <string name="FIELD_BIRTHDATE_EX">jj / mm / aa</string>
    <string name="FIELD_FIRSTNAME">Prénom</string>
    <string name="FIELD_LASTNAME">Nom</string>
    <string name="FIELD_PHONE">N° de mobile</string>
    <string name="FIELD_EMAIL">Email</string>
    <string name="FIELD_PASSWORD">Mot de passe</string>
    <string name="FIELD_PASSWORD_EX">6 car. minimum</string>
    <string name="FIELD_CODE">Code secret</string>
    <string name="FIELD_ADDRESS">Adresse</string>
    <string name="FIELD_ZIP_CODE">Code postal</string>
    <string name="FIELD_CITY">Ville</string>
    <string name="FIELD_FULLNAME">Nom et Prénom</string>
    <string name="FIELD_SECRET_QUESTION">Choisissez une question secrète</string>
    <string name="FIELD_SECRET_QUESTION_OTHER">Votre question ?</string>
    <string name="FIELD_SECRET_ANSWER">Réponse</string>
    <string name="FIELD_SPONSOR">Code parrain (optionnel)</string>
    <string name="FIELD_BIO">Bio</string>
    <string name="FIELD_LOCATION">Localisation (ex: Paris, France)</string>
    <string name="FIELD_WEBSITE">Site web</string>
    <string name="SOCIAL_SHARE_TITLE">Vous aimez Flooz ?</string>
    <string name="SOCIAL_SHARE_FACEBOOK">Likez notre page !</string>
    <string name="SOCIAL_SHARE_TWITTER">Twittez nous !</string>
    <string name="SOCIAL_SHARE_APP">Donnez votre avis !</string>
    <string name="FIELD_IBAN">Code IBAN</string>
    <string name="FIELD_IBAN_PLACEHOLDER">FR</string>
    <string name="FIELD_CARD_OWNER">Titulaire de la carte</string>
    <string name="FIELD_CARD_NUMBER">Numero de carte</string>
    <string name="FIELD_CARD_EXPIRES">Date d\'expiration</string>
    <string name="FIELD_CARD_EXPIRES_PLACEHOLDER">MMYY</string>
    <string name="FIELD_CARD_CVV">Cryptogramme</string>
    <string name="FIELD_CARD_CVV_PLACEHOLDER">Code à 3 chiffres au dos de la carte </string>
    <string name="FIELD_CURRENT_PASSWORD">Mot de passe actuel</string>
    <string name="FIELD_NEW_PASSWORD">Nouveau mot de passe</string>
    <string name="FIELD_PASSWORD_CONFIRMATION">Confirmation</string>
    <string name="FIELD_PASSWORD_FORGET">Oups, mot de passe oublié ?</string>
    <string name="FIELD_SECRET_FORGET">Oups, réponse secrète oublié ?</string>
    <string name="FIELD_TRANSACTION_DATE">Se termine le :</string>
    <string name="FIELD_TRANSACTION_TITLE">Pour :</string>
    <string name="FIELD_TRANSACTION_TITLE_PLACEHOLDER">Restaurant entre amis</string>
    <string name="FIELD_TRANSACTION_TO">À :</string>
    <string name="FIELD_TRANSACTION_TO_PLACEHOLDER">Personnes à notifier</string>
    <string name="FIELD_TRANSACTION_CONTENT_PLACEHOLDER">Ajouter une description…</string>
    <string name="FIELD_TRANSACTION_EVENT_PLACEHOLDER">Ajouter plus d\'info…</string>
    <string name="FIELD_TRANSACTION_SELECT_FRIEND">A qui ?</string>
    <string name="FIELD_TRANSACTION_HIDE">Masquer ma participation</string>
    <string name="SIGNUP_FACEBOOK">Facebook</string>
    <string name="CUSTOM_SECRET_QUESTION">Question personnalisée…</string>
    <string name="LOGIN_FACEBOOK">Utiliser mes infos Facebook</string>
    <string name="LOGIN_OR">ou</string>
    <string name="LOGIN_PASSWORD_FORGOT">Oublié ?</string>
    <string name="MENU_NEW_TRANSACTION_EVENT">Collecter</string>
    <string name="MENU_NEW_TRANSACTION_PAYMENT">Payer</string>
    <string name="MENU_NEW_TRANSACTION_COLLECT">Réclamer</string>
    <string name="MENU_EDIT_PROFILE">Mon profil public</string>
    <string name="MENU_PAYMENT">Payer</string>
    <string name="MENU_CHARGE">Réclamer</string>
    <string name="MENU_COLLECT">Créer</string>
    <string name="MENU_NEW_FLOOZ">Floozer @%s</string>
    <string name="MENU_ADD_FRIENDS">Ajouter aux amis</string>
    <string name="MENU_REMOVE_FRIENDS">Supprimer des amis</string>
    <string name="MENU_ACCEPT_FRIENDS">Accepter la requête</string>
    <string name="MENU_DECLINE_FRIENDS">Refuser la requête</string>
    <string name="MENU_STOP_PENDING_FRIENDS">Annuler la requête</string>
    <string name="MENU_AVATAR">Voir la photo</string>
    <string name="MENU_OTHER">Plus…</string>
    <string name="MENU_BLOCK_USER">Bloquer</string>
    <string name="MENU_REPORT_USER">Signaler</string>
    <string name="SETTINGS_COORD">Mes coordonnées</string>
    <string name="SETTINGS_PRIVACY">Partage &amp; vie privée</string>
    <string name="SETTINGS_PRIVACY_INFOS">Pratique ! Choisissez la visibilité par défaut de vos flooz. Vous avez toutefois la possibilité de la changer lors de chacun de vos paiements</string>
    <string name="SETTINGS_SECRET_INFOS">Votre question actuelle est :</string>
    <string name="EDIT_ACCOUNT_SEND_SMS">Renvoyer SMS</string>
    <string name="EDIT_ACCOUNT_SEND_MAIL">Renvoyer email</string>
    <string name="TRANSACTION_SCOPE_PUBLIC">Public</string>
    <string name="TRANSACTION_SCOPE_FRIEND">Amis</string>
    <string name="TRANSACTION_SCOPE_PRIVATE">Privé</string>
    <string name="DOCUMENTS_HOME">Justificatif de domicile (&lt; 3 mois)</string>
    <string name="SIGNUP_READ_CGU">En cliquant sur \"inscription\" vous déclarez accepter les CGU Flooz.</string>
    <string name="POPUP_WALLET_TITLE">Solde</string>
    <string name="POPUP_WALLET_MSG">Quand vous payez, Flooz utilise votre solde si les fonds sont suffisants pour couvrir la totalité du paiement, sinon, c\'est votre CB qui est utilisée.</string>
    <string name="Send_Button_Mobile">Suivant</string>
</resources>