<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@color/background_header"
    android:padding="@dimen/timeline_cell_large_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/signup_infos_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:layout_marginRight="@dimen/timeline_cell_small_margin"
                android:nextFocusForward="@+id/signup_infos_lastname"
                android:hint="@string/FIELD_FIRSTNAME"
                android:textColorHint="@color/placeholder"/>

            <EditText
                android:id="@id/signup_infos_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:nextFocusForward="@+id/signup_infos_email"
                android:singleLine="true"
                android:hint="@string/FIELD_LASTNAME"
                android:textColorHint="@color/placeholder"/>

        </LinearLayout>

        <EditText
            android:id="@id/signup_infos_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/timeline_cell_small_margin"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@+id/signup_infos_birthdate"
            android:hint="@string/FIELD_EMAIL"
            android:textColorHint="@color/placeholder"/>

        <FrameLayout
            android:layout_marginTop="@dimen/timeline_cell_small_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@id/signup_infos_birthdate"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:singleLine="true"
                android:textColorHint="@color/placeholder"
                android:inputType="date"
                android:textColor="@android:color/white"
                android:nextFocusForward="@+id/signup_infos_password"
                android:hint="@string/FIELD_BIRTHDATE"/>

            <TextView
                android:id="@+id/signup_infos_birthdate_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_margin="8dp"
                android:textColor="@color/placeholder"
                android:text="@string/FIELD_BIRTHDATE_EX"/>

        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="@dimen/timeline_cell_small_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@id/signup_infos_password"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:singleLine="true"
                android:textColorHint="@color/placeholder"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:hint="@string/FIELD_PASSWORD">

            </EditText>

            <TextView
                android:id="@+id/signup_infos_password_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_margin="8dp"
                android:textColor="@color/placeholder"
                android:text="@string/FIELD_PASSWORD_EX"/>

        </FrameLayout>

        <Button
            android:id="@+id/signup_infos_next"
            android:layout_marginTop="@dimen/timeline_cell_xlarge_margin"
            android:layout_width="300dp"
            android:layout_height="@dimen/signup_button_height"
            android:gravity="center"
            android:background="@drawable/background_action_button"
            android:enabled="false"
            android:text="@string/Send_Button_Mobile"
            android:layout_marginBottom="@dimen/timeline_cell_xlarge_margin"
            android:textSize="20sp"
            android:textColor="@drawable/text_color_action_button"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/signup_infos_cgu"
        android:padding="@dimen/timeline_cell_medium_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/SIGNUP_READ_CGU"
        android:textColor="@color/placeholder"
        android:gravity="center"
        android:textAlignment="gravity"/>
    
</RelativeLayout>