<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_header"
    android:paddingTop="@dimen/dimen_xlarge"
    android:paddingLeft="@dimen/dimen_xlarge"
    android:paddingRight="@dimen/dimen_xlarge">

    <TextView
        android:id="@+id/authentication_secret_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SETTINGS_SECRET_INFOS"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <TextView
        android:layout_below="@id/authentication_secret_text"
        android:id="@+id/authentication_secret_question"
        android:layout_marginTop="@dimen/dimen_large"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="20sp"/>

    <me.flooz.app.UI.View.AutoResizeEditText
        android:layout_below="@id/authentication_secret_question"
        android:id="@+id/authentication_secret_answer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/placeholder"
        android:inputType="none"
        android:textColor="@android:color/white"
        android:hint="@string/FIELD_SECRET_ANSWER"
        android:layout_marginTop="@dimen/dimen_large"
        style="@android:style/Widget.Holo.EditText"/>

    <EditText
        android:layout_below="@id/authentication_secret_answer"
        android:id="@+id/authentication_secret_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/FIELD_PASSWORD"
        android:singleLine="true"/>

    <EditText
        android:layout_below="@id/authentication_secret_password"
        android:id="@+id/authentication_secret_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/FIELD_PASSWORD_CONFIRMATION"
        android:singleLine="true"/>

    <Button
        android:layout_below="@id/authentication_secret_confirm"
        android:id="@+id/authentication_secret_next"
        android:layout_marginTop="@dimen/dimen_xlarge"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/signup_button_height"
        android:gravity="center"
        android:background="@drawable/background_action_button"
        android:text="@string/GLOBAL_NEXT"
        android:layout_marginBottom="@dimen/dimen_xlarge"
        android:textSize="20sp"
        android:textColor="@drawable/text_color_action_button"/>

    <TextView
        android:layout_below="@id/authentication_secret_next"
        android:id="@+id/authentication_secret_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:padding="@dimen/dimen_xlarge"
        android:text="@string/FIELD_SECRET_FORGET"
        android:textColor="@android:color/white"/>

</RelativeLayout>
