<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_header">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_pager_view_height"
        android:background="@color/background_header"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/settings_privacy_header_title"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:textSize="@dimen/header_pager_view_fontsize"
            android:textColor="@color/blue"
            android:layout_height="wrap_content"
            android:text="@string/SETTINGS_PRIVACY"/>

        <ImageView
            android:id="@+id/settings_privacy_header_back"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/new_flooz_header_cross"
            android:padding="@dimen/timeline_cell_large_margin"
            android:layout_height="fill_parent"
            android:src="@drawable/nav_back"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/settings_privacy_infos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/timeline_cell_xlarge_margin"
        android:layout_marginLeft="@dimen/timeline_cell_xlarge_margin"
        android:layout_marginRight="@dimen/timeline_cell_xlarge_margin"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/SETTINGS_PRIVACY_INFOS"/>

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/settings_privacy_segment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/timeline_cell_xlarge_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/settings_privacy_segment_public"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TRANSACTION_SCOPE_PUBLIC"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/settings_privacy_segment_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TRANSACTION_SCOPE_FRIEND"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/settings_privacy_segment_private"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TRANSACTION_SCOPE_PRIVATE"
            style="@style/RadioButton" />

    </info.hoang8f.android.segmented.SegmentedGroup>

</LinearLayout>