<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/background_header">

    <EditText
        android:id="@+id/signin_pass_pass"
        android:layout_marginTop="@dimen/dimen_xlarge"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:inputType="textPassword"
        android:hint="@string/FIELD_NEW_PASSWORD"
        android:editable="false"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/signin_pass_confirm"
        android:layout_marginTop="@dimen/dimen_xlarge"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:inputType="textPassword"
        android:hint="@string/FIELD_PASSWORD_CONFIRMATION"
        android:editable="false"
        android:singleLine="true"/>

    <Button
        android:id="@+id/signin_pass_next"
        android:layout_marginTop="@dimen/dimen_xlarge"
        android:layout_width="300dp"
        android:layout_height="@dimen/signup_button_height"
        android:gravity="center"
        android:background="@drawable/background_action_button"
        android:enabled="false"
        android:text="@string/Send_Button_Mobile"
        android:layout_marginBottom="@dimen/dimen_xlarge"
        android:textAllCaps="false"
        android:textSize="20sp"/>

</LinearLayout>