<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/tooltip_scope_view"
    android:gravity="center_horizontal"
    android:padding="@dimen/dimen_large">

    <TextView
        android:id="@+id/dialog_wallet_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_large"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/POPUP_WALLET_TITLE"/>

    <TextView
        android:id="@+id/dialog_wallet_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_xlarge"
        android:paddingRight="@dimen/dimen_xlarge"
        android:paddingBottom="@dimen/dimen_xlarge"
        android:paddingTop="@dimen/dimen_small"
        android:textColor="@color/placeholder"
        android:textSize="14sp"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/POPUP_WALLET_MSG"/>

    <Button
        android:id="@+id/dialog_wallet_btn"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/signup_button_height"
        android:background="@drawable/background_action_button"
        android:textColor="@android:color/white"
        android:text="@string/GLOBAL_OK"
        android:textStyle="bold"/>

</LinearLayout>